--- a/src/MageTest/PhpSpec/MagentoExtension/CodeGenerator/Generator/templates/controller_spec.template
+++ b/src/MageTest/PhpSpec/MagentoExtension/CodeGenerator/Generator/templates/controller_spec.template
@@ -8,6 +8,11 @@ use Prophecy\Argument;
 
 class %name% extends ControllerBehavior
 {
+    function let(\Magento\Framework\View\Element\Template\Context $context)
+    {
+        $this->beConstructedWith($context);
+    }
+
     function it_is_initializable()
     {
         $this->shouldHaveType('%subject%');
